--- a/example/pom.xml
+++ b/example/pom.xml
@@ -28,6 +28,14 @@
             <artifactId>mybatis</artifactId>
             <version>3.5.9</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
